--- a/carrinho-principal.html
+++ b/carrinho-principal.html
@@ -1,5 +1,5 @@
-<div data-f4f-cart-step="1" style="width: 100%;">
-    <div class="shopping-cart-block" data-f4f-selection>
+<div style="width: 100%;">
+    <div class="shopping-cart-block">
         <div class="shopping-cart-title-menu">
             <div class="shopping-cart-menu-column align-x">
                 <span class="padding-top-15px padding-bottom-15px">IMAGEM</span>
@@ -26,7 +26,7 @@
                 </div>
                 <div class="shopping-cart-column align-flex-start">
                     <div class="switch_box margin-bottom-15px">
-                        <input type="checkbox" name="chkdish" class="switch-styled" data-f4f-select-one>
+                        <input type="checkbox" name="chkdish" class="switch-styled">
                     </div>
                     <h2 class="padding-bottom-5px">Nome do Prato</h2>
                     <h3 class="padding-bottom-15px">Categoria: Nome da Categoria</h3>
@@ -35,13 +35,13 @@
                     <span id="shopping-cart-price">R$ 000,00</span>
                 </div>
                 <div class="shopping-cart-column align-x">
-                    <div class="input-group input-number-group" data-f4f-number-group>
+                    <div class="input-group input-number-group">
                         <div class="input-group-button">
-                            <span class="input-number-decrement" data-f4f-number-decrement>-</span>
+                            <span class="input-number-decrement" >-</span>
                         </div>
                         <input class="input-number" type="number" value="1" min="1" max="1000">
                         <div class="input-group-button">
-                            <span class="input-number-increment" data-f4f-number-increment>+</span>
+                            <span class="input-number-increment">+</span>
                         </div>
                     </div>
                 </div>
@@ -52,10 +52,10 @@
         </section>
         <div id="shopping-cart-select-block">
             <div class="switch_box margin-left-30px">
-                <input type="checkbox" name="chkall" id="chkall" class="switch-styled" data-f4f-select-all>
+                <input type="checkbox" name="chkall" id="chkall" class="switch-styled">
             </div>
             <label for="chkall" class="padding-left-15px">Selecionar Todos</label>
-            <div class="btn-generic-disabled margin-left-30px" data-f4f-any-selected><span>Excluir</span></div>
+            <div class="btn-generic-disabled margin-left-30px" ><span>Excluir</span></div>
         </div>
         <section id="shopping-cart-confirm-block" class="padding-bottom-30px">
             <div id="shopping-cart-confirm-column-one">
@@ -70,7 +70,7 @@
             </div>
             <div id="shopping-cart-confirm-column-two">
                 <h2 class="padding-right-30px padding-top-30px padding-bottom-30px" style="font-family: 'Roboto light'; font-size: 21px; color: #282828;">Total a Pagar: <span style="font-family: 'Roboto Bold'; font-size: 28px; color: #000;">R$ 000,00</span></h2>
-                <div class="btn-generic margin-right-30px" data-f4f-cart-change-step="2">
+                <div class="btn-generic margin-right-30px">
                     <span>Comprar</span>
                 </div>
             </div>
