Atualizando arquivos pasta CMS, tirando funções "data" do antigo projeto

--- a/carrinho-cadastrar-endereco.html
+++ b/carrinho-cadastrar-endereco.html
@@ -14,7 +14,7 @@
         <input type="text" name="complemento" id="complemento" placeholder="Ex: Ao lado do shopping" class="input-generic">
 
         <label for="cep" class="label-generic">CEP:</label>
-        <input type="text" name="cep" id="cep" placeholder="Ex: 01234-567" class="input-generic" data-mask="00000-000" pattern="\d{5}-\d{3}">
+        <input type="text" name="cep" id="cep" placeholder="Ex: 01234-567" class="input-generic" pattern="\d{5}-\d{3}">
 
         <label for="estado" class="label-generic">Estado:</label>
         <select name="estado" id="estado" class="input-generic">
@@ -27,7 +27,7 @@
         </select>
 
         <div class="margin-top-30px margin-bottom-30px form-row">
-            <span class="margin-right-15px" data-f4f-slide-hide="#form-cadastrar-endereco">Cancelar</span>
+            <span class="margin-right-15px">Cancelar</span>
             <div class="btn-generic">
                 <span>Salvar</span>
             </div>
